[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/art/ryderidle.png" type="Texture" id=1]
[ext_resource path="res://Assets/art/audio/wumpaeat.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/art/ryder2.png" type="Texture" id=3]
[ext_resource path="res://Assets/art/ryder1.png" type="Texture" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://Assets/art/audio/woah.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/art/audio/deathsound.wav" type="AudioStream" id=7]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0);

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/flash_color = Color( 0.760784, 0.156863, 0.156863, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 24.2736
height = 168.166

[node name="Player" type="Area2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
frames = SubResource( 3 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="MaceEat" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="RyderHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
